[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gevideo"
version = "0.1.0"
description = "Great Elephant Law daily video pipeline backbone"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8"]
youtube = [
    "google-api-python-client>=2",
    "google-auth>=2",
    "google-auth-oauthlib>=1",
    "google-auth-httplib2>=0.2",
]

[tool.setuptools]
packages = ["gevideo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
